--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "@medusajs/admin-sdk": "2.2.0",
     "@medusajs/cli": "2.2.0",
     "@medusajs/framework": "2.2.0",
-    "@medusajs/medusa": "2.2.0",
+    "@medusajs/medusa": "^2.2.0",
     "@mikro-orm/core": "5.9.7",
     "@mikro-orm/knex": "5.9.7",
     "@mikro-orm/migrations": "5.9.7",
